crates/openracing-plugin-abi/tests/snapshots/snapshot_tests__plugin_header_snapshots__header_bytes.snap
---
source: crates/openracing-plugin-abi/tests/snapshot_tests.rs
expression: "format!(\"{:02X?}\", bytes)"
---
[31, 4C, 57, 57, 00, 00, 01, 00, 03, 00, 00, 00, 00, 00, 00, 00]
