crates/openracing-plugin-abi/tests/snapshots/snapshot_tests__plugin_header_snapshots__header_with_all_capabilities.snap
---
source: crates/openracing-plugin-abi/tests/snapshot_tests.rs
expression: "format!(\"{:#?}\", header)"
---
PluginHeader {
    magic: 1465338929,
    abi_version: 65536,
    capabilities: 7,
    reserved: 0,
}
